fixed spacing

--- a/assets/new-register-member.css
+++ b/assets/new-register-member.css
@@ -112,7 +112,7 @@
         max-width: 100%;
     }
     .resgister-member-section {
-        margin-top: 127px;
+        padding-top: 127px;
     }
     .member-login-btn, 
     .member-login-btn:hover {
