--- a/assets/style.css
+++ b/assets/style.css
@@ -11516,7 +11516,7 @@ section.cann {
     padding-left: 0px;
 }
     footer {
-    background-image: url(footer-bg.png);
+    /* background-image: url(footer-bg.png); */
     background-size: cover;
     width: 100%;
     padding: 100px 5px 100px 15px;
